# diff_check

./: CMakeLists.txt  Makefile  README.md  flash.jlink
src/: CMakeLists.txt  board.cpp  board_msp.cpp  common.h  device.cpp  device.hpp  drivers.cpp  drivers.hpp  main.cpp  stm32f4xx_hal_conf.h  telemetry.cpp  tusb_config.h  usb_descriptors.c
src/drivers/: beeper.cpp  brake.cpp  chiller.cpp  drv_hx711.cpp  drv_ina236.cpp  drv_max6675.cpp  drv_mpu6050.cpp  led.cpp  motor.cpp  serial.cpp  speed.cpp  usb.cpp
src/sys/: syscalls.c
